--- a/package.json
+++ b/package.json
@@ -22,112 +22,116 @@
     "ES2016"
   ],
   "dependencies": {
+    "ajv": "^5.5.1",
     "bootstrap": "^4.0.0-alpha",
     "classlist-polyfill": "^1.2",
     "classnames": "^2.2",
-    "core-decorators": "^0.19",
-    "core-js": "^2.4",
+    "core-decorators": "^0.20",
+    "core-js": "^2.5",
     "ease-component": "^1.0",
     "fbjs": "^0.8",
-    "history": "^4.6",
+    "history": "^4.7",
     "lodash": "^4.17",
     "mobile-detect": "^1.3",
     "modernizr": "^3.5",
-    "moment": "^2.18",
-    "prop-types": "^15.5.10",
-    "react": "^15.5",
-    "react-dom": "^15.5",
+    "moment": "^2.19",
+    "prop-types": "^15.6.0",
+    "react": "^16.2",
     "react-history": "^0.18",
-    "react-inlinesvg": "^0.6",
+    "react-inlinesvg": "^0.7",
     "react-redux": "^5.0",
-    "react-router-dom": "^4.1",
-    "redux": "^3.6",
-    "redux-observable": "^0.14",
-    "redux-persist": "^4.8",
+    "react-router-dom": "^4.2",
+    "redux": "^3.7",
+    "redux-observable": "^0.17",
+    "redux-persist": "^5.4.0",
     "redux-thunk": "^2.2",
-    "rxjs": "^5.4",
+    "rxjs": "^5.5",
     "sass-mediaqueries": "^1.6",
     "scroll": "^2.0",
-    "scroll-doc": "^0.1"
+    "scroll-doc": "^0.2"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1",
-    "babel-core": "^6.24",
-    "babel-eslint": "^7.2",
-    "babel-jest": "^20.0",
-    "babel-loader": "^7.0",
+    "autoprefixer": "^7.2",
+    "babel-core": "^6.26",
+    "babel-eslint": "^8.0",
+    "babel-jest": "^21.2",
+    "babel-loader": "^7.1",
     "babel-plugin-istanbul": "^4.1",
-    "babel-plugin-lodash": "^3.2",
+    "babel-plugin-lodash": "^3.3",
     "babel-plugin-transform-decorators-legacy": "^1.3",
     "babel-plugin-transform-object-assign": "^6.22",
     "babel-plugin-transform-runtime": "^6.23",
     "babel-preset-latest": "^6.24",
     "babel-preset-react": "^6.24",
     "babel-preset-stage-1": "^6.24",
-    "babel-register": "^6.24",
-    "babel-runtime": "^6.23",
+    "babel-register": "^6.26",
+    "babel-runtime": "^6.26",
     "browser-sync": "^2.18",
-    "browser-sync-webpack-plugin": "^1.1",
-    "chalk": "^1.1",
-    "chromedriver": "^2.29",
+    "browser-sync-webpack-plugin": "^1.2",
+    "chalk": "^2.3",
+    "chromedriver": "^2.33",
     "clean-webpack-plugin": "^0.1",
-    "copy-webpack-plugin": "^4.0",
+    "copy-webpack-plugin": "^4.2",
     "css-loader": "^0.28",
-    "del": "^2.2",
-    "enzyme": "^2.8",
-    "esdoc": "^0.5",
+    "del": "^3.0",
+    "enzyme": "^3.2",
+    "enzyme-adapter-react-16": "^1.1.0",
+    "esdoc": "^1.0",
     "esdoc-es7-plugin": "^0.0.3",
-    "eslint": "^3.19",
-    "eslint-config-airbnb": "^15.0",
+    "eslint": "^4.12",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-import-resolver-webpack": "^0.8",
-    "eslint-loader": "^1.7",
+    "eslint-loader": "^1.9",
     "eslint-plugin-babel": "^4.1",
-    "eslint-plugin-flowtype": "^2.34",
-    "eslint-plugin-import": "^2.3",
-    "eslint-plugin-jsx-a11y": "^5.0",
-    "eslint-plugin-react": "^7.0",
+    "eslint-plugin-flowtype": "^2.39",
+    "eslint-plugin-import": "^2.8",
+    "eslint-plugin-jsx-a11y": "^6.0",
+    "eslint-plugin-react": "^7.5",
     "exports-loader": "^0.6",
     "expose-loader": "^0.7",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "fetch-mock": "^5.11",
-    "file-loader": "^0.11",
-    "html-loader": "^0.4",
-    "html-webpack-plugin": "^2.28",
-    "husky": "^0.13",
-    "image-webpack-loader": "^3.3",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "fetch-mock": "^5.13",
+    "file-loader": "^1.1",
+    "html-loader": "^0.5",
+    "html-webpack-plugin": "^2.30",
+    "husky": "^0.14",
+    "image-webpack-loader": "^3.4",
     "imports-loader": "^0.7",
-    "jest-cli": "^20.0",
-    "jest-enzyme": "^3.2",
-    "jsdom": "^11.0",
+    "jest": "^21.2.1",
+    "jest-cli": "^21.2",
+    "jest-enzyme": "^4.0",
+    "jsdom": "^11.5",
     "json-loader": "^0.5",
     "markdown-loader": "^2.0",
     "modernizr-loader": "^1.0",
     "nightwatch": "^0.9",
-    "node-sass": "^4.5",
+    "node-sass": "^4.7",
     "null-loader": "^0.1",
     "offline-plugin": "^4.8",
     "postcss-loader": "^2.0",
+    "postcss-sass": "^0.2.0",
     "raw-loader": "^0.5",
-    "react-addons-test-utils": "^15.5",
-    "react-hot-loader": "^3.0.0-beta",
-    "reactotron-react-js": "^1.11",
-    "reactotron-redux": "^1.11",
+    "react-addons-test-utils": "^15.6",
+    "react-dom": "^16.2.0",
+    "react-hot-loader": "^3.1.3",
+    "reactotron-react-js": "^1.13",
+    "reactotron-redux": "^1.13",
     "redux-diff-logger": "^0.0.9",
     "redux-logger": "^3.0",
-    "redux-mock-store": "^1.2",
+    "redux-mock-store": "^1.3",
     "rsync": "^0.6",
     "sass-loader": "^6.0",
     "script-loader": "^0.7",
-    "selenium-server-standalone-jar": "^3.4",
-    "source-map-support": "^0.4",
-    "style-loader": "^0.18",
-    "stylelint": "^7.10",
-    "stylelint-config-standard": "^16.0",
-    "stylelint-order": "^0.4",
-    "stylelint-scss": "^1.4",
-    "url-loader": "^0.5",
-    "webpack": "^2.6",
-    "webpack-dev-server": "^2.4",
+    "selenium-server-standalone-jar": "^3.7",
+    "source-map-support": "^0.5",
+    "style-loader": "^0.19",
+    "stylelint": "^8.3",
+    "stylelint-config-standard": "^18.0",
+    "stylelint-order": "^0.7",
+    "stylelint-scss": "^2.2",
+    "url-loader": "^0.6",
+    "webpack": "^3.9",
+    "webpack-dev-server": "^2.9",
     "webpack-merge": "^4.1",
     "xhr-mock": "^1.9"
   },
