--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "scroll-doc": "^0.2"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.0.0-beta.38",
     "autoprefixer": "^7.2",
     "babel-core": "^6.26",
     "babel-eslint": "^8.0",
